fix: add automatic hyphens on overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     }
 }
 
+* {
+    hyphens: auto;
+}
+
 body,
 html {
     height: 100%;
